--- a/tienda.ui
+++ b/tienda.ui
@@ -6,12 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>759</width>
+    <width>929</width>
     <height>616</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Tienda</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="Recursos.qrc">
+    <normaloff>:/Recursos/tienda.png</normaloff>:/Recursos/tienda.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -25,7 +29,7 @@
       </property>
       <property name="maximumSize">
        <size>
-        <width>350</width>
+        <width>300</width>
         <height>16777215</height>
        </size>
       </property>
@@ -151,10 +155,14 @@
              </size>
             </property>
             <property name="styleSheet">
-             <string notr="true">background-color: rgb(85, 170, 127);</string>
+             <string notr="true">background-color: rgb(170, 255, 127);</string>
             </property>
             <property name="text">
              <string>Agregar</string>
+            </property>
+            <property name="icon">
+             <iconset resource="Recursos.qrc">
+              <normaloff>:/Recursos/carrito-de-compras.png</normaloff>:/Recursos/carrito-de-compras.png</iconset>
             </property>
            </widget>
           </item>
@@ -166,6 +174,12 @@
     </item>
     <item>
      <widget class="QWidget" name="widget_2" native="true">
+      <property name="minimumSize">
+       <size>
+        <width>600</width>
+        <height>0</height>
+       </size>
+      </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QGroupBox" name="groupBox_3">
@@ -195,6 +209,38 @@
        <item>
         <widget class="QWidget" name="widget_3" native="true">
          <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QPushButton" name="btnFinalizar">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>50</height>
+             </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(255, 170, 127);</string>
+            </property>
+            <property name="text">
+             <string>Finalizar</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="pushButton">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>50</height>
+             </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">background-color: rgb(170, 255, 255);</string>
+            </property>
+            <property name="text">
+             <string>Nuevo</string>
+            </property>
+           </widget>
+          </item>
           <item>
            <spacer name="horizontalSpacer">
             <property name="orientation">
@@ -314,13 +360,15 @@ color: rgb(170, 0, 0);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>759</width>
+     <width>929</width>
      <height>26</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="Recursos.qrc"/>
+ </resources>
  <connections/>
 </ui>
